2024-07-24T00:38:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10068445662 # 366
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-24
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 688 1159 / 689 1160
* notice: next accum: outdated-unq outdated-all / unq all: 689 1160 / 690 1161
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-27] / [2024-07-23]

2024-07-09T00:36:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9848971628 # 351
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-09
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 687 1158 / 689 1160
* notice: next accum: outdated-unq outdated-all / unq all: 688 1159 / 689 1160
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-24] / []

2024-07-08T00:37:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9831602109 # 350
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-08
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 686 1157 / 689 1160
* notice: next accum: outdated-unq outdated-all / unq all: 687 1158 / 689 1160
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-23] / []

2024-07-05T00:36:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9801310219 # 347