@@ -1,3 +1,12 @@
+2024-08-28T00:38:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10588057709 # 401
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-28
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 689 1160 / 690 1161
+* notice: next accum: outdated-unq outdated-all / unq all: 690 1161 / 691 1162
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2024-07-23] / [2024-08-27]
+
 2024-07-24T00:38:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10068445662 # 366
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-24
